Release notes for xmlBlaster (http://www.xmlBlaster.org)
The "#99999" numbers are Subversion revision numbers.

Current subversion
==================
 o #14041 changed LOCAL protocol: simplified and decoupled client from slave: now they can 
   start in random sequence

 o #14020 Extended XmlScripting with exception handling

 o #14007 Partly fix for expiry of volatile message timing out during publish processing
   This bug could led to NPE
 
 o #13949 -xmlBlaster/jdk14loggingCapture defaults now to true
   Like this als java.util.logging will be automatically redirected to our jutils logging
   This is for the server and the client library

 o #13929 Refactor SOCKET protocol classes to reuse code for EMAIL protocol driver

 o #13909 added contrib task in build.xml


Changes for 1.0.7 [2005-10-26] #13887 "Xmas release patch 7"
============================================================
 
 o #13886 Added support for crimson XML parser if forced for JDK 1.5 (last JDK1.3 compatible change)

 o #13880 Ported org.w3c.dom.ls.DOMImplementationLS JDK 1.5 dependency to reflection

 o #13871 C++ client lib: Fixed missing initialization of progressListener_

 o #13870 and #13876 Suppress missleading exception when connection is DEAD but worker active

 o #13857 Extended Applet support (with real time callback) for more than one applet in same servlet-session.

 o #13845 Added JMX methods to clear or remove messages from callback queue

 o #13842 moved some classes in contrib packages

 o #13825 Bugfix for 'no meat found'
   This could lead to a looping callback message and subscriber not receiving msgs anymore.
   Removed misleading log.error in same context
   Reported by Marshall Shapiro 2005-10-10

 o #13824 Queue persistence entries are now recovered even if new data is available at the back

 o #13815 removed Global and made java logging to Execute

 o #13805 Added applet ping method, extended example applet and docu
