@@ -3,9 +3,19 @@ The "#99999" numbers are Subversion revision numbers.
 
 Current subversion
 ==================
+ o #14045 Added possibility to add attributes to protocol configuration to ConnectQos
+   (currently Java only)
+
+ o #14043 The QoS attributes are enforced to be case sensitive
+
  o #14041 changed LOCAL protocol: simplified and decoupled client from slave: now they can 
    start in random sequence
 
+ o #14023 Added Macromedia Flash Player XMLRPC demo client (Cyrille)
+   See xmlBlaster/demo/flash/xmrpc/README
+
+ o #14039 Fixed ClientEvent to transport ConnectQos
+ 
  o #14020 Extended XmlScripting with exception handling
 
  o #14007 Partly fix for expiry of volatile message timing out during publish processing
